# helm.zed

./: .gitignore  Cargo.toml  LICENSE.md  README.md  extension.toml
.github/workflows/: release.yml
languages/helm/: config.toml  highlights.scm  injections.scm  outline.scm
src/: helm.rs
